--- a/src/compo/input-text.css
+++ b/src/compo/input-text.css
@@ -33,7 +33,7 @@
 .input-text:hover {
   padding: 0px 4px 0px 12px;
   gap: 8px;
-  border: 1px solid #78716C;
+  border: 1px solid #FF7262;
 }
 
 /* Focus/Active State */
