--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,14 @@ code {
   gap: 20px;
   width: 100%;
 }
+.input-group h4 {
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0%;
+  color: #000000;
+  margin: 0 0 8px 0;
+  padding: 0;
+}
