Add menu component with divider and fix button pressed states

--- a/src/compo/input-link.css
+++ b/src/compo/input-link.css
@@ -43,7 +43,7 @@
 
 /* Filled State (when input has value) */
 .input-link.filled {
-  border: 1px solid #EAE9E8;
+  border: 1px solid #FF7262;
 }
 
 .input-link:disabled {
